--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
   "devDependencies": {
     "date-fns": "^2.29.3",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1"
   }
 }
